<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright (C) 2009-2011 FuseSource Corp.
  http://fusesource.com
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
     http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
  
    <parent>
        <groupId>org.fusesource</groupId>
        <artifactId>fusesource-pom</artifactId>
        <version>1.12</version>
    </parent>

    <groupId>org.fusesource.hawtjni</groupId>
    <artifactId>hawtjni-project</artifactId>
    <version>1.19-SNAPSHOT</version>
    <packaging>pom</packaging>
  
    <name>HawtJNI</name>
    <description>A JNI code generator based on the JNI generator used by the eclipse SWT project</description>

    <properties>
        <forge-project-id>hawtjni</forge-project-id>
        <forge-project-id-uc>HAWTJNI</forge-project-id-uc>
        <scalate-version>1.6.1</scalate-version>
        <scalamd-version>1.6</scalamd-version>    
        <slf4j-version>1.7.30</slf4j-version>
        <jetty-plugin-version>9.4.28.v20200408</jetty-plugin-version>
        <scala-plugin-version>2.9</scala-plugin-version>
        <scala-version>2.9.3</scala-version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.outputTimestamp>2020-12-13T22:04:00Z</project.build.outputTimestamp>
    </properties>

    <url>http://fusesource.github.io/${forge-project-id}</url>
    <inceptionYear>2009</inceptionYear>

    <issueManagement>
        <system>github</system>
        <url>https://github.com/fusesource/hawtjni/issues</url>
    </issueManagement>
  
    <mailingLists>
    
        <mailingList>
            <name>Discussion List</name>
            <archive>http://groups.google.com/group/${forge-project-id}</archive>
            <post>${forge-project-id}@googlegroups.com</post>
            <subscribe>${forge-project-id}+subscribe@googlegroups.com</subscribe>
            <unsubscribe>${forge-project-id}+unsubscribe@googlegroups.com</unsubscribe>
        </mailingList>
        <mailingList>
            <name>Commits and Issue Tracker List</name>
            <archive>http://groups.google.com/group/${forge-project-id}-commits</archive>
            <post>${forge-project-id}-commits@googlegroups.com</post>
            <subscribe>${forge-project-id}-commits+subscribe@googlegroups.com</subscribe>
            <unsubscribe>${forge-project-id}-commits+unsubscribe@googlegroups.com</unsubscribe>
        </mailingList>
    </mailingLists>

    <licenses>
        <license>
            <name>Eclipse Public License - v 1.0</name>
            <url>http://www.eclipse.org/legal/epl-v10.html</url>
            <distribution>repo</distribution>
        </license>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
  
    <scm>
        <connection>scm:git:https://github.com/fusesource/${forge-project-id}.git</connection>
        <developerConnection>scm:git:https://github.com/fusesource/${forge-project-id}.git</developerConnection>
        <url>https://github.com/fusesource/${forge-project-id}/tree/${project.scm.tag}</url>
        <tag>master</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>sonatype-nexus-staging</id>
            <name>Sonatype Staging Repository</name>
            <url> https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Snapshot Repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
  
    <developers>
        <developer>
            <id>chirino</id>
            <name>Hiram Chirino</name>
            <email>hiram@hiramchirino.com</email>
            <url>http://hiramchirino.com</url>
            <timezone>GMT-5</timezone>
        </developer>
    </developers>

    <build>
        <defaultGoal>install</defaultGoal>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.12.1</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <forceJavacCompilerUse>true</forceJavacCompilerUse>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.3</version>
                    <configuration>
                        <failIfNoTests>false</failIfNoTests>
                        <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory" />
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.6.3</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <excludePackageNames>*.internal</excludePackageNames>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>3.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-idea-plugin</artifactId>
                <version>2.2.1</version>
                <configuration>
                    <downloadSources>true</downloadSources>
                    <downloadJavadocs>true</downloadJavadocs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.10</version>
                <configuration>
                    <downloadSources>true</downloadSources>
                    <downloadJavadocs>true</downloadJavadocs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                </configuration>
            </plugin>
        </plugins>
    </build>
  
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <aggregate>true</aggregate>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.5.0</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>index</report>
                            <report>summary</report>
                            <report>plugins</report>
                            <report>dependencies</report>
                            <report>mailing-list</report>
                            <report>issue-tracking</report>
                            <report>license</report>
                            <report>scm</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>surefire-report-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </reporting>

    <modules>
        <module>hawtjni-runtime</module>
        <module>hawtjni-generator</module>
        <module>hawtjni-maven-plugin</module>
        <module>hawtjni-example</module>
        <!--
    <module>hawtjni-website</module>
        -->
    </modules>

</project>
